fix width on smaller screens

--- a/src/Components/DetailedView/CastCard/CastCard.module.css
+++ b/src/Components/DetailedView/CastCard/CastCard.module.css
@@ -3,9 +3,7 @@
   position: relative;
   align-items: center;
   overflow: scroll;
-  width: 100%;
-  max-width: 1000px;
-  margin: 16px 0;
+  margin: 16px;
 }
 
 .castCards img {
@@ -19,7 +17,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin: 8px;
+  margin-right: 8px;
   text-decoration: none;
   border: 1px solid var(--border);
   border-radius: 30px;
